fix: include dark mode colors

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -12,7 +12,7 @@
   }
 
   .card {
-    @apply border border-gray-200 rounded sm:w-max shadow;
+    @apply dark:border-0 rounded sm:w-max shadow-md dark:shadow-slate-500/50;
   }
   .button {
     @apply tracking-tight rounded-lg align-middle py-2 px-3 bg-gray-100 font-medium text-sm leading-5 max-h-max;
